--- a/app/views/gerendes/index.html.erb
+++ b/app/views/gerendes/index.html.erb
@@ -1,13 +1,8 @@
+<%= render "shared/header" %>
+
 <div class='gerende-index'>
     <h2 class='title'><%= link_to 'ゲレンデ一覧',root_path %></h2>
-    <%= form_with(url: search_gerendes_path, local: true, method: :get, class: "search-form") do |f|%>
-      <div class="selection-field">
-        <%= f.label :gerende, 'ゲレンデ'%>
-        <%= f.text_field :keyword, class: "search-form"%>
-      </div>
 
-    <%= f.submit "検索",class: "search-btn"%>
-    <% end %>
     <ul class='item-lists'>
     <% @gerendes.each do |gerende|%>
       <li class='list'>
@@ -17,5 +12,5 @@
 
     <% end %>
   <%= paginate @gerendes, outer_window: 3 %>
-
 </div>
+<%= render "shared/footer" %>
