--- a/app/views/gerendes/show.html.erb
+++ b/app/views/gerendes/show.html.erb
@@ -1,3 +1,5 @@
+<%= render "shared/header" %>
+
 <h1>
   <%= @gerende.name %>
 </h1>
@@ -39,3 +41,4 @@
   </div>
   <%= link_to "トップページへ", root_path%>
 </div>
+<%= render "shared/footer" %>
