検索機能の充実とページ遷移の簡易化

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,6 @@
 <footer class='fotter'>
   <div class='fotter-text-wrap'>
+  <%= link_to "トップページへ", root_path%>
     <%= link_to 'プライバシーポリシー', "#", class: 'fotter-text'%>
     <%= link_to '利用規約', "#", class: 'fotter-text'%>
   </div>
