--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,7 +5,7 @@
      <%= form_with(url: search_gerendes_path, local: true, method: :get, class: "search-form") do |f|%>
       <div class="selection-field">
         <%= f.label :gerende, 'ゲレンデ検索'%>
-        <%= f.text_field :keyword, class: "search-form"%>
+        <%= f.text_field :keyword,placeholder: "ゲレンデ名や都道府県名", class: "search-form"%>
       </div>
       <%= f.submit "検索",class: "search-btn"%>
     <% end %>
