見本画像の追加

--- a/app/views/gerendes/index.html.erb
+++ b/app/views/gerendes/index.html.erb
@@ -1,5 +1,7 @@
 <%= render "shared/header" %>
-
+  <div class="images">
+    <%= image_tag 'image1' %>
+  </div>
 <div class='gerende-index'>
     <h2 class='title'><%= link_to 'ゲレンデ一覧',root_path %></h2>
 
