--- a/app/views/gerendes/index.html.erb
+++ b/app/views/gerendes/index.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/header" %>
-  <div class="images">
-    <%= image_tag 'image1' %>
+  <div>
+    <%= image_tag 'geresuki1', class: 'main-image' %>
   </div>
 <div class='gerende-index'>
     <h2 class='title'><%= link_to 'ゲレンデ一覧',root_path %></h2>
