--- a/app/views/gerendes/search.html.erb
+++ b/app/views/gerendes/search.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/header" %>
   <div class="images">
-    <%= image_tag 'image1' %>
+    <%= image_tag 'geresuki1' %>
   </div>
 <div class='gerende-index'>
     <h2 class='title'><%=link_to 'ゲレンデ一覧',root_path %></h2>
