--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,5 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<%= render "shared/header" %>
+<h2>ユーザー情報編集</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -38,6 +39,7 @@
 
 <h3>アカウント削除</h3>
 
-<p>辞めちゃうの? <%= button_to "本当に？", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>辞めちゃうの? <%= button_to "本当に？", registration_path(resource_name), data: { confirm: "削除しますか?" }, method: :delete %></p>
 
 <%= link_to "戻る", :back %>
+<%= render "shared/footer" %>
