カテゴリの列化

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -73,6 +73,11 @@ body{
   color: #333333;
 }
 
+.show-lists{
+  column-count: 3;
+  background-color: white;
+}
+
 .lists-right {
   display: flex;
   list-style: none;
