--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/header" %>
 <h2>Sign up</h2>
 
 <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
@@ -44,3 +45,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+<%= render "shared/footer" %>
