現状画像がない場合でも詳細表示

--- a/app/views/gerendes/show.html.erb
+++ b/app/views/gerendes/show.html.erb
@@ -11,7 +11,9 @@
     <%= link_to '積雪量はこちら', "#",{:class =>"subtitle"} %>
   </h3>
 <div class= "subtitle">ゲレンデマップ</div>
-<%= image_tag @gerende.image, class: 'gerende-image' %>
+<% if @gerende.image.present?%>
+  <%= image_tag @gerende.image, class: 'gerende-image' %>
+<% end %>
 <div class="container">
   <% if user_signed_in? %>
   <h4>＜コメント投稿＞</h4>
