エラーメッセージの日本語表記

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,8 @@
     </h1>
   </div>
 
+  <%= render 'devise/shared/error_messages', model: f.object %>
+
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">ニックネーム</label>
