--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,7 @@
-<footer class='fotter'>
-  <div class='fotter-text-wrap'>
-    <%= link_to "トップページへ", root_path, class: 'fotter-text'%>
-    <%= link_to 'プライバシーポリシー', "#", class: 'fotter-text'%>
-    <%= link_to '利用規約', "#", class: 'fotter-text'%>
+<footer class='footer'>
+  <div class='footer-text-wrap'>
+    <%= link_to "トップページへ", root_path, class: 'footer-text'%>
+    <%= link_to 'プライバシーポリシー', "#", class: 'footer-text'%>
+    <%= link_to '利用規約', "#", class: 'footer-text'%>
   </div>
-  <%#= image_tag "#", class:"fotter-logo"%>
 </footer>
