--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,9 @@
   </div>
   <div class='nav'>
     <ul class='lists-left'>
-      <li　class= "category-list" id="lists"></li>都道府県
+      <li　class= "category-list" id="lists">
+        <button class="header_btn">都道府県</button>
+      </li>
         <ul class="show-lists hidden" id="pull-down">
           <li class="pull-down-list"><%= link_to'北海道',search_gerendes_path(:keyword => "北海道")%></li>
           <li class="pull-down-list"><%= link_to'青森',search_gerendes_path(:keyword => "青森")%></li>
@@ -53,11 +55,27 @@
     </ul>
     <ul class='lists-right'>
       <% if user_signed_in? %>
-        <li><%= link_to current_user.nickname, edit_user_registration_path(current_user.id), class: "user-nickname"  %></li>
-        <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout"  %></li>
+        <li>
+          <%= link_to(edit_user_registration_path(current_user.id), class: "user-nickname") do %>
+            <button class=header_btn><%= current_user.nickname %></button>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to(destroy_user_session_path, method: :delete, class: "logout") do %>
+            <button class="header_btn">ログアウト</button>
+          <% end %>
+        </li>
       <% else %>
-        <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
-        <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
+        <li>
+          <%= link_to(new_user_session_path, class: "login") do %>
+            <button class= "header_btn">ログイン</button>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to(new_user_registration_path, class: "sign-up") do %>
+            <button class= "header_btn">新規登録</button>
+          <% end %>
+        </li>
       <% end %>
     </ul>
   </div>
