ページネーション日本語化(サイズ拡大)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -156,6 +156,10 @@ body{
   font-size: 20px;
 }
 
+.pagenate{
+  font-size: 20px;
+}
+
 /*gerendes/show*/
 .subtitle, .nickname, .comment-image, .form-input{
   padding-left: 2vw;
