--- a/app/views/gerendes/index.html.erb
+++ b/app/views/gerendes/index.html.erb
@@ -14,6 +14,6 @@
       </li>
 
     <% end %>
-  <%= paginate @gerendes, outer_window: 3 %>
+  <div class="pagenate"><%= paginate @gerendes, outer_window: 3 %></div>
 </div>
 <%= render "shared/footer" %>
