--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,32 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application'%>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
   </head>
 
   <body>
     <%= yield %>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- Initialize Swiper -->
+    <script>
+      var swiper = new Swiper('.swiper-container', {
+        loop: true,         //画像のループ
+        effect: 'slide',    //切り替わるときのアニメーション
+        speed: 1000,        //画像の切替スピード
+        autoplay: {         //自動で動かす
+          delay: 3000,
+          disableOnInteraction: true
+      },
+      pagination: {        //ページネーション
+        el: '.swiper-pagination',
+        type: 'bullets',
+        clickable: true
+      },
+        navigation: {
+          nextEl: '.swiper-button-next',
+          prevEl: '.swiper-button-prev',
+        },
+      });
+    </script>
   </body>
 </html>
