--- a/app/views/gerendes/search.html.erb
+++ b/app/views/gerendes/search.html.erb
@@ -1,7 +1,16 @@
 <%= render "shared/header" %>
 <div class='gerende-index'>
-  <div class="images">
-    <%= image_tag 'geresuki1', class: 'main-image'  %>
+  <!-- Swiper -->
+  <div class="swiper-container">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><%= image_tag 'geresuki1', class: 'main-image' %></div>
+      <div class="swiper-slide"><%= image_tag 'geresuki4', class: 'main-image' %></div>
+      <div class="swiper-slide"><%= image_tag 'geresuki5', class: 'main-image' %></div>
+    </div>
+    <!-- Add Arrows -->
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-pagination"></div>
   </div>
     <h2><%= link_to 'ゲレンデ一覧',root_path,{:class =>"title"} %></h2>
     
@@ -15,5 +24,5 @@
     <% else %>
       検索結果はありません
     <% end %>
-
+</div>
 <%= render "shared/footer" %>
