不要部分削除

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,14 +16,14 @@
     <!-- Initialize Swiper -->
     <script>
       var swiper = new Swiper('.swiper-container', {
-        loop: true,         //画像のループ
-        effect: 'slide',    //切り替わるときのアニメーション
-        speed: 1000,        //画像の切替スピード
-        autoplay: {         //自動で動かす
+        loop: true,
+        effect: 'slide',
+        speed: 1000,
+        autoplay: {
           delay: 3000,
           disableOnInteraction: true
       },
-      pagination: {        //ページネーション
+      pagination: {
         el: '.swiper-pagination',
         type: 'bullets',
         clickable: true
